@@ -72,6 +72,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 2.5.5
   e - make it so that even if an array request has multiple consecutive '%' the slot 
       limit will be set correctly
+  b - remove the use of a GNU specific function, and fix an error for solaris builds
 
 2.5.4
   f - added the ability to track gpus. Users set gpus=X in the nodes file for
